fixed image sizing on mobile

--- a/memoryclickygame/src/components/DisplayCard/DisplayCard.css
+++ b/memoryclickygame/src/components/DisplayCard/DisplayCard.css
@@ -1,22 +1,22 @@
 .card {
     background: #fff;
     border-radius: 2px;
-    height: 20%;
+    /* height: 20%; */
     margin: 10px;
     position: relative;
     width: 20%;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999; 
   }
   
-   .card > .img-container {
+  .card > .img-container {
     overflow: hidden;
     text-align: center;
     background:#6CADDC;
   } 
   
   .card > .img-container > img {
-    width: 100%
-    
+    width: 100%;
+    /* height: 100%; */
   }
   
   .card > .content {
